<resources>
    <string name="app_name">Farmácia AppTech</string>
    <string name="farm_cia_app">Farmácia AppTech</string>
    <string name="pesquisar">Pesquisar…</string>
    <string name="m_dulos">Módulos</string>
    <string name="pr_ximo">FAQ(Dúvidas)</string>
    <string name="criar_conta">criar conta</string>
    <string name="create_account">criar conta</string>
    <string name="login">login</string>
    <string name="carregando_medicamentos">Carregando medicamentos…</string>
    <string name="op_o_1">A</string>
    <string name="op_o_2">B</string>
    <string name="op_o_3">C</string>
    <string name="responder">Responder</string>
    <string name="reiniciar_simulado">Reiniciar Simulado</string>
    <string name="bot_o_para_registrar_um_novo_usu_rio">Botão para registrar um novo usuário</string>
    <string name="bot_o_para_fazer_login">Botão para fazer login</string>
    <string name="login_bem_sucedido">Login Bem-sucedido</string>
    <string name="senha">Senha</string>
    <string name="registrar">Registrar</string>
    <string name="fazer_login">Fazer Login</string>
    <string name="e_mail">E-mail</string>
    <string name="informa_es_sobre_vigil_ncia_e_promo_o_sa_de">Informações sobre Vigilância e Promoção à Saúde</string>
    <string name="monitoramento">monitoramento</string>
    <string name="saiba_mais">Saiba mais</string>
    <string name="a_promo_o_sa_de_envolve_a_es_e_pol_ticas_p_blicas">A promoção à saúde envolve ações e políticas
        públicas…
    </string>
    <string name="vigil_ncia_e_promo_o_sa_de">Vigilância e Promoção à Saúde</string>
    <string name="promocao_saude">Promoção da Saúde</string>
    <string name="vigilancia_e_promocao_saude">vigilancia e Promoção à saúde</string>
    <string name="descricao_imagem_vigilancia">descricao imagem vigilancia</string>
    <string name="texto_da_pr_xima_tela">Estude</string>
    <string name="d_vidas_frequentes">Dúvidas Frequentes</string>
    <string name="descri_o_da_imagem">Descrição da imagem</string>
    <string name="voltar">Voltar</string>
    <string name="voltar2">voltar</string>
    <string name="entrar">Entrar</string>
    <string name="digite_a_senha">Digite a senha</string>
    <string name="tutorial">
        Coloque a senha que foi disponibilizada no grupo do WhatsApp da Turma de Farmácia 1B (noite).
        Lembrando a cada aluno que não seja da sala, o app ficará sabendo automaticamente.
        Então, estude e seja feliz! Qualquer sugestão de melhoria do aplicativo, avise ao desenvolvedor: João Igor.
    </string>
    <string name="vers_o_1_0_0_ndesenvolvedor_jo_o_igor">Versão: 1.3.7\nDesenvolvedor: João Igor</string>
    <string name="bem_vindo_ao_reino_da_farm_cia_se_cadastre_e_entre_no_mundo_do_estudo">Bem-vindo ao Reino da Farmácia
        se Cadastre e entre no Mundo do estudo
    </string>
    <string name="senha1">Senha</string>
    <string name="nome_de_usu_rio">Nome de Usuário</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login1">Login</string>
    <string name="voc_est_logado">Você está logado</string>
    <string name="criar_novo_t_pico">Criar Novo Tópico</string>
    <string name="f_rum_de_discuss_o">Fórum de Discussão</string>
    <string name="chat_em_tempo_real">Chat em Tempo Real</string>
    <string name="digite_sua_mensagem">Digite sua mensagem</string>
    <string name="enviar_mensagem">Enviar Mensagem</string>
    <string name="contato_com_o_desenvolvedor">Contato com o Desenvolvedor</string>
    <string name="mensagem_do_chat">Mensagem do Chat</string>
    <string name="abrir_chat">Abrir Chat</string>
    <string name="mensagem_para_o_desenvolvedor">Mensagem para o desenvolvedor</string>
    <string name="enviar_para_o_desenvolvedor">Enviar para o Desenvolvedor</string>
    <string name="abrir_contato_com_desenvolvedor">Abrir Contato com Desenvolvedor</string>
    <string name="descri_o_do_t_pico">entre em contato</string>
    <string name="t_tulo_do_t_pico">Fórum Central</string>
    <string name="forum">forum\n</string>
    <string name="t_tulo_do_t_pico1">Título do Tópico</string>
    <string name="descri_o_do_t_pico2">Descrição do Tópico</string>
    <string name="f_rmula_do_medicamento">Fórmula do Medicamento</string>
    <string name="sobre">Sobre</string>
    <string name="ltima_atualiza_o">Changelog</string>
    <string name="autor">Sobre</string>
    <string name="device">Device (Aparelho)</string>
    <string name="in_cio">Início</string>
    <string name="inicio">inicio\n</string>
    <string name="ultima_atualizacao">Changelog</string>
    <string name="todo">TODO</string>
    <string name="acertos_0">Acertos: 0</string>
    <string name="trofeu">trofeu</string>
    <string name="conte_do_do_estudo">Conteúdo do Estudo</string>
    <string name="informa_es_sobre_bromatologia">Informações sobre Bromatologia</string>
    <string name="alternativa_1">Alternativa 1</string>
    <string name="alternativa_2">Alternativa 2</string>
    <string name="alternativa_3">Alternativa 3</string>
    <string name="alternativa_4">Alternativa 4</string>
    <string name="pergunta">Pergunta</string>
    <string name="iniciar_estudo">Iniciar Estudo</string>
    <string name="texto_de_bromatologia">Texto de Bromatologia</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="ivTrofeu"/>
    <string name="mensagem_do_usu_rio">Mensagem do usuário</string>
    <string name="usu_rio">Usuário</string>
    <string name="autentica_o_biom_trica">Autenticação Biométrica</string>
    <string name="autentique_se_usando_sua_impress_o_digital">Autentique-se usando sua impressão digital</string>
    <string name="iniciar_autentica_o">Iniciar Autenticação</string>
    <string name="coloque_seu_dedo_no_sensor">Coloque seu dedo no sensor</string>
    <string name="cone_de_autentica_o_biom_trica">Ícone de autenticação biométrica</string>
    <string name="falha_na_autentica_o">Falha na autenticação</string>
    <string name="cone_de_autentica_obiom_trica">Ícone de autenticaçãobiométrica</string>
    <string name="digite_seu_nome">Digite seu nome:</string>
    <string name="enviar_feedback">Enviar Feedback</string>
    <string name="seu_nome">Seu nome</string>
    <string name="ouvir">Ouvir</string>
    <string name="falar">Falar</string>
    <string name="gif">gif</string>
    <string name="texto_do_rob_aparecer_aqui">FALA:</string>
    <string name="texto_extra_do_aparecer_aqui">Texto extraído aparecerá aqui</string>
    <string name="capturar_imagem">Capturar Imagem</string>
    <string name="imagem_capturada">Imagem Capturada</string>
    <string name="c_digo_escaneado">Código Escaneado:</string>
    <string name="capturar_c_digo">Capturar Código</string>
    <string name="escaneie_um_c_digo_de_barras">Escaneie um código de barras...</string>
    <string name="perfil">Perfil</string>
    <string name="campanha">campanha</string>
    <string name="pergunta1">Pergunta</string>
    <string name="pr_xima">Próxima</string>
    <string name="nome_da_pol_tica">Nome da Política</string>
    <string name="detalhes_da_pol_tica">Detalhes da Política</string>
    <string name="proxima">Próxima</string>
    <string name="pergunta12">Pergunta</string>
    <string name="detalhes_politica">Detalhes da Política</string>
    <string name="nome_politica">Nome da Política</string>
    <string name="opcao3">Opção 3</string>
    <string name="opcao2">Opção 2</string>
    <string name="opcao1">Opção 1</string>
    <string name="texto_sobre_atualidades">Texto sobre atualidades</string>
    <string name="pr_ximo_texto">Próximo Texto</string>
    <string name="pr_ximo_texto1">Próximo Texto</string>
    <string name="digite_seu_pin">Digite seu PIN</string>
    <string name="confirmar">Confirmar</string>
    <string name="ir_para_estudo">Ir para Estudo</string>
    <string name="modo_de_estudo">Modo de Estudo</string>
    <string name="aqui_voc_pode_aprofundar_seus_conhecimentos_de_forma_interativa">Aqui você pode aprofundar seus conhecimentos de forma interativa.</string>
    <string name="iniciar_estudo1">Assista os Videos para aprender.</string>
    <string name="ir_para_estudo1">Videos</string>
    <string name="acertadas_0">Acertadas: 0</string>
    <string name="atualidades_farmac_uticas">Atualidades Farmacêuticas</string>
    <string name="opcao31">Opção 3</string>
    <string name="opcao21">Opção 2</string>
    <string name="opcao11">Opção 1</string>
    <string name="pontua_o_0">Pontuação: 0</string>
    <string name="tempo_10s">Tempo: 10s</string>
    <string name="pergunta_aqui">Pergunta Aqui</string>
    <string name="acerte_o_medicamento">Acerte o Medicamento!</string>
    <string name="image">image</string>
    <string name="viewpager_description">viewpager_description\n</string>
    <string name="licen_a_creative_commons_by_nc_nd_4_0">Licença: Creative Commons BY-NC-ND 4.0</string>
    <string name="licenca_creative_commons">licença\n</string>
    <string name="ia_aguardando_sua_resposta">IA: Aguardando sua resposta...</string>
    <string name="enviar_resposta">Enviar Resposta</string>
    <string name="digite_o_tratamento_recomendado">Digite o tratamento recomendado</string>
    <string name="paciente_estou_com_dor_de_cabe_a_e_febre_o_que_devo_fazer">Paciente: Estou com dor de cabeça e febre. O que devo fazer?</string>
    <string name="chatbot_farm_cia">Chatbot Farmácia</string>
    <string name="ver_analytics">Ver Analytics</string>
    <string name="nome_cient_fico">Nome Científico</string>
    <string name="nome_comercial">Nome Comercial</string>
    <string name="calculadora_de_transforma_o_de_soro">Calculadora de Transformação de Soro</string>
    <string name="concentra_o_inicial_mg_ml">Concentração Inicial (mg/mL)</string>
    <string name="volume_inicial_ml">Volume Inicial (mL)</string>
    <string name="concentra_o_desejada_mg_ml">Concentração Desejada (mg/mL)</string>
    <string name="calcular">Calcular</string>
    <string name="calcular1">Calcular</string>
    <string name="informe_as_calorias_por_grama_kcal_g">Informe as calorias por grama (kcal/g)</string>
    <string name="informe_as_gramas_g">Informe as gramas (g)</string>
    <string name="calculadora_de_calorias_kcal">Calculadora de Calorias (kcal)</string>
    <string name="ativar_microfone">Ativar Microfone</string>
    <string name="volume">Volume</string>
    <string name="localiza_o">Localização</string>
    <string name="notifica_es">Notificações</string>
    <string name="modo_escuro">Modo Escuro</string>
    <string name="ativar_microfone1">Ativar Microfone</string>
    <string name="configura_es">Configurações</string>
    <string name="apagar_anota_o">Apagar Anotação</string>
    <string name="salvar_anota_o">Salvar Anotação</string>
    <string name="suas_anota_es_aparecer_o_aqui">Suas anotações aparecerão aqui...</string>
    <string name="digite_sua_anota_o_aqui">Digite sua anotação aqui...</string>
    <string name="pontuacao">Pontuação: 0</string>
    <string name="responder12">Responder</string>
    <string name="op_o_e">Opção E</string>
    <string name="op_o_d">Opção D</string>
    <string name="op_o_c">Opção C</string>
    <string name="op_o_b">Opção B</string>
    <string name="op_o_a">Opção A</string>
    <string name="pergunta_aqui1">Pergunta aqui</string>
    <string name="botao_abrir_excel">Botão para abrir arquivo Excel</string>
    <string name="abrir_excel">Abrir Excel</string>
    <string name="exibir_pdf">exibir_pdf\n</string>
    <string name="exibir_pdf_scroll">Exibir conteúdo do PDF</string>
    <string name="calend_rio">Calendário</string>
    <string name="chave_pix_83993437321">Chave PIX: 83993437321</string>
    <string name="copiar_chave_pix">Copiar chave PIX</string>
    <string name="qr_code_pix">QR Code PIX</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
</resources>