<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="24dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center">

    <ImageView
            android:id="@+id/qrCodeImageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/qr_code_pix" />

    <TextView
            android:id="@+id/chavePixTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chave_pix_83993437321"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textColor="#000"
            android:textStyle="bold" />

    <Button
            android:id="@+id/copiarChaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copiar_chave_pix"
            android:layout_marginTop="16dp" />



</LinearLayout>
